# chival-verify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
chival_verify/: cli.py  evaluation.py  grader.py  models.py  scenario.py  suite.py
chival_verify/verifier/: analysis.py  execution.py  runner.py  sandbox.py
examples/: README.md
examples/idor/: bug.py  fix.py  test_it.py
examples/off_by_one/: bug.py  fix.py  test_it.py
examples/stale_cache/: bug.py  fix.py  test_it.py
tests/: test_cli.py
